# bmtest

./: configure.ac  configure.lineno
src/: blackmagic_test.cc
src/examples/: Makefile.am  blackmagic-test  capture
